k8s/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ing
  namespace: argocd
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS # needed or it will keep bouncing and fail to resolve
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-dns-cloudflare
    external-dns.alpha.kubernetes.io/hostname: argocd.abdullahishs.co.uk
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.abdullahishs.co.uk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server 
              port:
                number: 80
  tls:
  - hosts:
    - argocd.abdullahishs.co.uk
    secretName: full-stack-k8s-argocd-tls
